# ddd-in-rust

./: Cargo.toml  README.md
chapter02_value_object/: Cargo.toml
chapter02_value_object/src/: a1_simple_vo.rs  a3_all_vo.rs  a5_vo_with_phantom.rs  lib.rs  model_number.rs
chapter03_entity/: Cargo.toml
chapter03_entity/src/: a1_simple_user.rs  a2_1_mutable_entity.rs  a2_2_mutable_entity.rs  a2_mutable_entity.rs  a3_identify_entity.rs  entity.md  lib.rs
chapter04_domain_service/: Cargo.toml
chapter04_domain_service/src/: a1_domain_service.rs  a2_distribution.rs  lib.rs
chapter05_repository/: Cargo.toml
chapter05_repository/src/: domain.rs  lib.rs  mock_repository.rs  orm_repository.rs  simple_repository.rs
chapter06_application_service/: Cargo.toml
chapter06_application_service/src/: domain.rs  lib.rs  usecase.rs
chapter08_sample_application/: Cargo.toml
chapter08_sample_application/src/: domain.rs  lib.rs
chapter08_sample_application/src/app/: mock_server.rs  rdb_server.rs
chapter08_sample_application/src/domain/: value_object.rs
chapter08_sample_application/src/domain/entity/: user.rs
chapter08_sample_application/src/domain/repository/: user.rs
chapter08_sample_application/src/domain/service/: user.rs
chapter08_sample_application/src/domain/value_object/: user_id.rs
chapter08_sample_application/src/infrastructure/: datastore.rs  server.rs
chapter08_sample_application/src/infrastructure/api/: mock_api.rs  rdb_api.rs
chapter08_sample_application/src/infrastructure/datastore/: dto.rs  mock_context.rs  pg.rs  rdb_context.rs
chapter08_sample_application/src/infrastructure/server/: filter.rs
chapter08_sample_application/src/infrastructure/server/handler/: user.rs
chapter08_sample_application/src/usecase/: user.rs
chapter08_sample_application/src/usecase/dto/: user.rs
chapter08_sample_application/src/usecase/input/: user.rs
chapter09_factory/: Cargo.toml
chapter09_factory/src/: domain.rs  infrastructure.rs  lib.rs  usecase.rs
chapter09_factory/src/domain/: entity.rs  value_object.rs
chapter09_factory/src/domain/entity/: user.rs  user_factory.rs
chapter09_factory/src/domain/repository/: user.rs
chapter09_factory/src/domain/value_object/: name.rs  user_id.rs
chapter09_factory/src/infrastructure/: datastore.rs
chapter09_factory/src/infrastructure/api/: mock_api.rs  rdb_api.rs
chapter09_factory/src/infrastructure/datastore/: mock_context.rs  rdb_context.rs
chapter09_factory/src/usecase/: input.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs
src/: c2_value_object.rs  c3_entity.rs  c5_repository.rs  c6_application_service.rs  c8_user_interface.rs  entity.rs  error.rs  lib.rs
src/c2_value_object/: a1_simple_vo.rs  a2_derive_vo.rs  a3_all_vo.rs  a5_vo_with_phantom.rs
src/c3_entity/: a1_simple_user.rs  a2_mutable_entity.rs  a3_identify_entity.rs
src/c4_domain_service/: a1_domain_service.rs  a2_distribution.rs
src/c5_repository/: a1_repository.rs  domain.rs  mock_repository.rs  orm_repository.rs  schema.rs  simple_repository.rs
src/c5_repository/a1_repository/: domain.rs  simple_repository.rs
src/c6_application_service/: a1_application_service.rs  domain.rs  usecase.rs
src/c8_user_interface/: application_service.rs  domain.rs  infrastructure.rs  mock_context.rs  mock_server.rs  usecase.rs
src/c8_user_interface/app/: main.rs  rdb_server.rs
src/c8_user_interface/domain/entity/: user.rs
src/c8_user_interface/domain/service/: user.rs
src/c8_user_interface/domain/value_object/: mail_address.rs  name.rs  user_id.rs
src/c8_user_interface/infrastructure/: api.rs  datastore.rs  server.rs
src/c8_user_interface/infrastructure/api/: mock.rs  rdb_api.rs
src/c8_user_interface/infrastructure/datastore/: dto.rs  (+3 more)
src/c8_user_interface/usecase/: user.rs
src/entity/: a3_identify_entity.rs
src/value_object/: a1_simple_vo.rs  a2_derive_vo.rs  a3_all_vo.rs  a4_vo_with_behavior.rs  a5_vo_with_phantom.rs
(+5 files in other folders)
