[package]
name = "ddd"
version = "0.1.0"
authors = ["kuwana-kb <41671293+kuwana-kb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
derive-getters = "0.1.0"
derive_more = "0.99.2"
derive-new = "0.5.8"
diesel = "1.4.3"
regex = "1.3.4"
rust_decimal = { version = "1.2.1"}
postgres = "0.17.1"
thiserror = "1.0"
