[package]
name = "ddd"
version = "0.1.0"
authors = ["kuwana-kb <41671293+kuwana-kb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mock_server"
path = "src/c8_user_interface/app/mock_server.rs"

[[bin]]
name = "rdb_server"
path = "src/c8_user_interface//app/rdb_server.rs"


[dependencies]
anyhow = "1.0.26"
async-trait = "0.1.24"
derive-getters = "0.1.0"
derive_more = "0.99.2"
derive-new = "0.5.8"
diesel = "1.4.3"
postgres = "0.17.1"
r2d2_postgres = "0.16.0"
regex = "1.3.4"
rust_decimal = { version = "1.2.1"}
serde = { version = "1.0.104", features = ["derive"]}
thiserror = "1.0"
tokio = {version = "0.2", features = ["macros"]}
ulid = "0.3.1"
warp = "0.2.2"
