[package]
name = "chapter02_value_object"
version = "0.1.0"
authors = ["kuwana-kb <41671293+kuwana-kb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
derive-getters = "0.1.0"
derive-new = "0.5.8"
regex = "1.3.7"
rust_decimal = "1.4.1"

common = {path = "../common"}
